fix(baggage): redis cache